force-app/main/default/objects/ssot__FlowRun__dlm/fields/ssot__CompletedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__CompletedDateTime__c</fullName>
    <label>Completed DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CompletedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>