force-app/main/default/objects/ssot__FlowRun__dlm/fields/ssot__LastExecutedElementId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastExecutedElementId__c</fullName>
    <label>Last Executed Element</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastExecutedElementId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>