force-app/main/default/objects/ssot__FlowRun__dlm/fields/ssot__rel_1697761221557_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761221557_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowRun_FlowVersionId_map_FlowVersio_rel</label>
    <referenceTo>ssot__FlowVersion__dlm</referenceTo>
    <relationshipLabel>FlowRun_FlowVersionId_map_FlowVersio_rel</relationshipLabel>
    <relationshipName>rel_1697761221557_end</relationshipName>
    <type>Lookup</type>
</CustomField>