force-app/main/default/objects/ssot__FlowRun__dlm/fields/ssot__rel_1697761221633_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761221633_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FlowRun_PrimaryRecordId_map_Individu_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>FlowRun_PrimaryRecordId_map_Individu_rel</relationshipLabel>
    <relationshipName>rel_1697761221633_end</relationshipName>
    <type>Lookup</type>
</CustomField>