force-app/main/default/objects/ssot__FlowRun__dlm/fields/ssot__StoppedReason__c.field-meta.xml
<CustomField>
    <fullName>ssot__StoppedReason__c</fullName>
    <label>Stopped Reason</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StoppedReason</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>